traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:7: error: not found: value x0
  x0 ; y0 = getX() ;getY()
  ^TraversalDiagonal:7: error: not found: value y0
  x0 ; y0 = getX() ;getY()
       ^