traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  var a = getMondeHauteur()
  var b = getMondeLargeur()
  var x = getX()
  var y = getY()
  var cpt = 0
  x0 ; y0 = getX() ;getY()
 do {
 setPos(y, x) 
 ecritMessage(cpt)
	
 x+=1
  y+= 1
   
   
 }while (a!=x && b!=y)
   
}